syntax = "proto3";


option go_package = "github.com/DiSysCBFA/Handind-5/Api";

package Api;

service AuctionService {
  rpc Bid (BidRequest) returns (BidResponse);
  rpc Result (ResultRequest) returns (ResultResponse);
}

message BidRequest {
  string bidder = 1;
  int32 amount = 2;
}

message BidResponse {
  enum Status {
    SUCCESS = 0;
    FAIL = 1;
    EXCEPTION = 2;
  }
  Status status = 1;
}

message ResultRequest {}

message ResultResponse {
  string highest_bidder = 1;
  int32 highest_bid = 2;
  bool is_auction_closed = 3;
}